trunk/BPELGenerator/src/org/unify_framework/abstract_syntax/connector_mechanism/parser/ConnectorParser.java
// $ANTLR 3.3 Nov 30, 2010 12:45:30 /Development/Workspaces/Unify/Unify/src/org/unify_framework/abstract_syntax/connector_mechanism/parser/Connector.g 2011-10-28 15:48:17
 package org.unify_framework.abstract_syntax.connector_mechanism.parser; 

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

@SuppressWarnings("all")
public class ConnectorParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "HIERARCHICAL_DECOMPOSITION_CONNECTOR", "CALLING_ACTIVITY", "CALLED_ACTIVITY", "BEFORE_CONNECTOR", "AFTER_CONNECTOR", "AROUND_CONNECTOR", "PARALLEL_CONNECTOR", "ALTERNATIVE_CONNECTOR", "ITERATING_CONNECTOR", "NEW_BRANCH_CONNECTOR", "SYNC_BRANCHES_CONNECTOR", "SWITCH_BRANCHES_CONNECTOR", "ADVICE_ACTIVITY", "ACTIVITY_POINTCUT", "EXECUTING_ACTIVITY", "EXECUTING_COMPOSITE_ACTIVITY", "EXECUTING_ATOMIC_ACTIVITY", "DATA_MAPPING", "MESSAGE_TYPE_VARIABLE", "TYPE_VARIABLE", "SPLIT_POINTCUT", "SPLIT", "ANDSPLIT", "XORSPLIT", "CONTROL_PORT_POINTCUT", "CONTROL_PORT", "CONTROL_INPUT_PORT", "CONTROL_OUTPUT_PORT", "QUALIFIED_NAME", "STRING", "IDENTIFIER", "WHITESPACE", "'CONNECT'", "'TO'", "'WITH'", "','", "'BEFORE'", "'AFTER'", "'AROUND'", "'PARALLEL TO'", "'ALTERNATIVE TO'", "'IF'", "'ITERATING OVER'", "'IN'", "'AND-SPLITTING AT'", "'SYNCHRONIZING AT'", "'SWITCHING AT'", "'XOR-JOINING AT'", "'executingactivity('", "')'", "'executingcompositeactivity('", "'executingatomicactivity('", "'='", "'messageTypeVariable('", "'typeVariable('", "'split('", "'andsplit('", "'xorsplit('", "'controlport('", "'controlinputport('", "'controloutputport('", "'.'"
    };
    public static final int EOF=-1;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int T__50=50;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int T__57=57;
    public static final int T__58=58;
    public static final int T__59=59;
    public static final int T__60=60;
    public static final int T__61=61;
    public static final int T__62=62;
    public static final int T__63=63;
    public static final int T__64=64;
    public static final int T__65=65;
    public static final int HIERARCHICAL_DECOMPOSITION_CONNECTOR=4;
    public static final int CALLING_ACTIVITY=5;
    public static final int CALLED_ACTIVITY=6;
    public static final int BEFORE_CONNECTOR=7;
    public static final int AFTER_CONNECTOR=8;
    public static final int AROUND_CONNECTOR=9;
    public static final int PARALLEL_CONNECTOR=10;
    public static final int ALTERNATIVE_CONNECTOR=11;
    public static final int ITERATING_CONNECTOR=12;
    public static final int NEW_BRANCH_CONNECTOR=13;
    public static final int SYNC_BRANCHES_CONNECTOR=14;
    public static final int SWITCH_BRANCHES_CONNECTOR=15;
    public static final int ADVICE_ACTIVITY=16;
    public static final int ACTIVITY_POINTCUT=17;
    public static final int EXECUTING_ACTIVITY=18;
    public static final int EXECUTING_COMPOSITE_ACTIVITY=19;
    public static final int EXECUTING_ATOMIC_ACTIVITY=20;
    public static final int DATA_MAPPING=21;
    public static final int MESSAGE_TYPE_VARIABLE=22;
    public static final int TYPE_VARIABLE=23;
    public static final int SPLIT_POINTCUT=24;
    public static final int SPLIT=25;
    public static final int ANDSPLIT=26;
    public static final int XORSPLIT=27;
    public static final int CONTROL_PORT_POINTCUT=28;
    public static final int CONTROL_PORT=29;
    public static final int CONTROL_INPUT_PORT=30;
    public static final int CONTROL_OUTPUT_PORT=31;
    public static final int QUALIFIED_NAME=32;
    public static final int STRING=33;
    public static final int IDENTIFIER=34;
    public static final int WHITESPACE=35;

    // delegates
    // delegators


        public ConnectorParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public ConnectorParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return ConnectorParser.tokenNames; }
    public String getGrammarFileName() { return "/Development/Workspaces/Unify/Unify/src/org/unify_framework/abstract_syntax/connector_mechanism/parser/Connector.g"; }


    public static class connector_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "connector"
    // /Development/Workspaces/Unify/Unify/src/org/unify_framework/abstract_syntax/connector_mechanism/parser/Connector.g:47:1: connector : ( hierarchical_decomposition_connector | inversion_of_control_connector );
    public final ConnectorParser.connector_return connector() throws RecognitionException {
        ConnectorParser.connector_return retval = new ConnectorParser.connector_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        ConnectorParser.hierarchical_decomposition_connector_return hierarchical_decomposition_connector1 = null;

        ConnectorParser.inversion_of_control_connector_return inversion_of_control_connector2 = null;



        try {
            // /Development/Workspaces/Unify/Unify/src/org/unify_framework/abstract_syntax/connector_mechanism/parser/Connector.g:48:2: ( hierarchical_decomposition_connector | inversion_of_control_connector )
            int alt1=2;
            alt1 = dfa1.predict(input);
            switch (alt1) {
                case 1 :
                    // /Development/Workspaces/Unify/Unify/src/org/unify_framework/abstract_syntax/connector_mechanism/parser/Connector.g:48:4: hierarchical_decomposition_connector
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_hierarchical_decomposition_connector_in_connector220);
                    hierarchical_decomposition_connector1=hierarchical_decomposition_connector();

                    state._fsp--;

                    adaptor.addChild(root_0, hierarchical_decomposition_connector1.getTree());

                    }
                    break;
                case 2 :
                    // /Development/Workspaces/Unify/Unify/src/org/unify_framework/abstract_syntax/connector_mechanism/parser/Connector.g:49:4: inversion_of_control_connector
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_inversion_of_control_connector_in_connector225);
                    inversion_of_control_connector2=inversion_of_control_connector();

                    state._fsp--;

                    adaptor.addChild(root_0, inversion_of_control_connector2.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "connector"

    public static class hierarchical_decomposition_connector_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "hierarchical_decomposition_connector"
    // /Development/Workspaces/Unify/Unify/src/org/unify_framework/abstract_syntax/connector_mechanism/parser/Connector.g:54:1: hierarchical_decomposition_connector : 'CONNECT' calling_activity 'TO' called_activity ( 'WITH' data_mapping ( ',' data_mapping )* )? -> ^( HIERARCHICAL_DECOMPOSITION_CONNECTOR calling_activity called_activity ( data_mapping )* ) ;
    public final ConnectorParser.hierarchical_decomposition_connector_return hierarchical_decomposition_connector() throws RecognitionException {
        ConnectorParser.hierarchical_decomposition_connector_return retval = new ConnectorParser.hierarchical_decomposition_connector_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token string_literal3=null;
        Token string_literal5=null;
        Token string_literal7=null;
        Token char_literal9=null;
        ConnectorParser.calling_activity_return calling_activity4 = null;

        ConnectorParser.called_activity_return called_activity6 = null;

        ConnectorParser.data_mapping_return data_mapping8 = null;

        ConnectorParser.data_mapping_return data_mapping10 = null;


        Object string_literal3_tree=null;
        Object string_literal5_tree=null;
        Object string_literal7_tree=null;
        Object char_literal9_tree=null;
        RewriteRuleTokenStream stream_36=new RewriteRuleTokenStream(adaptor,"token 36");
        RewriteRuleTokenStream stream_39=new RewriteRuleTokenStream(adaptor,"token 39");
        RewriteRuleTokenStream stream_37=new RewriteRuleTokenStream(adaptor,"token 37");
        RewriteRuleTokenStream stream_38=new RewriteRuleTokenStream(adaptor,"token 38");
        RewriteRuleSubtreeStream stream_calling_activity=new RewriteRuleSubtreeStream(adaptor,"rule calling_activity");
        RewriteRuleSubtreeStream stream_called_activity=new RewriteRuleSubtreeStream(adaptor,"rule called_activity");
        RewriteRuleSubtreeStream stream_data_mapping=new RewriteRuleSubtreeStream(adaptor,"rule data_mapping");
        try {
            // /Development/Workspaces/Unify/Unify/src/org/unify_framework/abstract_syntax/connector_mechanism/parser/Connector.g:55:2: ( 'CONNECT' calling_activity 'TO' called_activity ( 'WITH' data_mapping ( ',' data_mapping )* )? -> ^( HIERARCHICAL_DECOMPOSITION_CONNECTOR calling_activity called_activity ( data_mapping )* ) )
            // /Development/Workspaces/Unify/Unify/src/org/unify_framework/abstract_syntax/connector_mechanism/parser/Connector.g:55:4: 'CONNECT' calling_activity 'TO' called_activity ( 'WITH' data_mapping ( ',' data_mapping )* )?
            {
            string_literal3=(Token)match(input,36,FOLLOW_36_in_hierarchical_decomposition_connector238);  
            stream_36.add(string_literal3);

            pushFollow(FOLLOW_calling_activity_in_hierarchical_decomposition_connector240);
            calling_activity4=calling_activity();

            state._fsp--;

            stream_calling_activity.add(calling_activity4.getTree());
            string_literal5=(Token)match(input,37,FOLLOW_37_in_hierarchical_decomposition_connector242);  
            stream_37.add(string_literal5);

            pushFollow(FOLLOW_called_activity_in_hierarchical_decomposition_connector244);
            called_activity6=called_activity();

            state._fsp--;

            stream_called_activity.add(called_activity6.getTree());
            // /Development/Workspaces/Unify/Unify/src/org/unify_framework/abstract_syntax/connector_mechanism/parser/Connector.g:55:52: ( 'WITH' data_mapping ( ',' data_mapping )* )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==38) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
                    // /Development/Workspaces/Unify/Unify/src/org/unify_framework/abstract_syntax/connector_mechanism/parser/Connector.g:55:53: 'WITH' data_mapping ( ',' data_mapping )*
                    {
                    string_literal7=(Token)match(input,38,FOLLOW_38_in_hierarchical_decomposition_connector247);  
                    stream_38.add(string_literal7);

                    pushFollow(FOLLOW_data_mapping_in_hierarchical_decomposition_connector249);
                    data_mapping8=data_mapping();

                    state._fsp--;

                    stream_data_mapping.add(data_mapping8.getTree());
                    // /Development/Workspaces/Unify/Unify/src/org/unify_framework/abstract_syntax/connector_mechanism/parser/Connector.g:55:73: ( ',' data_mapping )*
                    loop2:
                    do {
                        int alt2=2;
                        int LA2_0 = input.LA(1);

                        if ( (LA2_0==39) ) {
                            alt2=1;
                        }


                        switch (alt2) {
                    	case 1 :
                    	    // /Development/Workspaces/Unify/Unify/src/org/unify_framework/abstract_syntax/connector_mechanism/parser/Connector.g:55:74: ',' data_mapping
                    	    {
                    	    char_literal9=(Token)match(input,39,FOLLOW_39_in_hierarchical_decomposition_connector252);  
                    	    stream_39.add(char_literal9);

                    	    pushFollow(FOLLOW_data_mapping_in_hierarchical_decomposition_connector254);
                    	    data_mapping10=data_mapping();

                    	    state._fsp--;

                    	    stream_data_mapping.add(data_mapping10.getTree());

                    	    }
                    	    break;

                    	default :
                    	    break loop2;
                        }
                    } while (true);


                    }
                    break;

            }



            // AST REWRITE
            // elements: calling_activity, called_activity, data_mapping
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 55:95: -> ^( HIERARCHICAL_DECOMPOSITION_CONNECTOR calling_activity called_activity ( data_mapping )* )
            {
                // /Development/Workspaces/Unify/Unify/src/org/unify_framework/abstract_syntax/connector_mechanism/parser/Connector.g:55:98: ^( HIERARCHICAL_DECOMPOSITION_CONNECTOR calling_activity called_activity ( data_mapping )* )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(HIERARCHICAL_DECOMPOSITION_CONNECTOR, "HIERARCHICAL_DECOMPOSITION_CONNECTOR"), root_1);

                adaptor.addChild(root_1, stream_calling_activity.nextTree());
                adaptor.addChild(root_1, stream_called_activity.nextTree());
                // /Development/Workspaces/Unify/Unify/src/org/unify_framework/abstract_syntax/connector_mechanism/parser/Connector.g:55:170: ( data_mapping )*
                while ( stream_data_mapping.hasNext() ) {
                    adaptor.addChild(root_1, stream_data_mapping.nextTree());

                }
                stream_data_mapping.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "hierarchical_decomposition_connector"

    public static class calling_activity_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "calling_activity"
    // /Development/Workspaces/Unify/Unify/src/org/unify_framework/abstract_syntax/connector_mechanism/parser/Connector.g:58:1: calling_activity : qualified_name -> ^( CALLING_ACTIVITY qualified_name ) ;
    public final ConnectorParser.calling_activity_return calling_activity() throws RecognitionException {
        ConnectorParser.calling_activity_return retval = new ConnectorParser.calling_activity_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        ConnectorParser.qualified_name_return qualified_name11 = null;


        RewriteRuleSubtreeStream stream_qualified_name=new RewriteRuleSubtreeStream(adaptor,"rule qualified_name");
        try {
            // /Development/Workspaces/Unify/Unify/src/org/unify_framework/abstract_syntax/connector_mechanism/parser/Connector.g:59:2: ( qualified_name -> ^( CALLING_ACTIVITY qualified_name ) )
            // /Development/Workspaces/Unify/Unify/src/org/unify_framework/abstract_syntax/connector_mechanism/parser/Connector.g:59:4: qualified_name
            {
            pushFollow(FOLLOW_qualified_name_in_calling_activity282);
            qualified_name11=qualified_name();

            state._fsp--;

            stream_qualified_name.add(qualified_name11.getTree());


            // AST REWRITE
            // elements: qualified_name
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 59:19: -> ^( CALLING_ACTIVITY qualified_name )
            {
                // /Development/Workspaces/Unify/Unify/src/org/unify_framework/abstract_syntax/connector_mechanism/parser/Connector.g:59:22: ^( CALLING_ACTIVITY qualified_name )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(CALLING_ACTIVITY, "CALLING_ACTIVITY"), root_1);

                adaptor.addChild(root_1, stream_qualified_name.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "calling_activity"

    public static class called_activity_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "called_activity"
    // /Development/Workspaces/Unify/Unify/src/org/unify_framework/abstract_syntax/connector_mechanism/parser/Connector.g:62:1: called_activity : qualified_name -> ^( CALLED_ACTIVITY qualified_name ) ;
    public final ConnectorParser.called_activity_return called_activity() throws RecognitionException {
        ConnectorParser.called_activity_return retval = new ConnectorParser.called_activity_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        ConnectorParser.qualified_name_return qualified_name12 = null;


        RewriteRuleSubtreeStream stream_qualified_name=new RewriteRuleSubtreeStream(adaptor,"rule qualified_name");
        try {
            // /Development/Workspaces/Unify/Unify/src/org/unify_framework/abstract_syntax/connector_mechanism/parser/Connector.g:63:2: ( qualified_name -> ^( CALLED_ACTIVITY qualified_name ) )
            // /Development/Workspaces/Unify/Unify/src/org/unify_framework/abstract_syntax/connector_mechanism/parser/Connector.g:63:4: qualified_name
            {
            pushFollow(FOLLOW_qualified_name_in_called_activity301);
            qualified_name12=qualified_name();

            state._fsp--;

            stream_qualified_name.add(qualified_name12.getTree());


            // AST REWRITE
            // elements: qualified_name
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 63:19: -> ^( CALLED_ACTIVITY qualified_name )
            {
                // /Development/Workspaces/Unify/Unify/src/org/unify_framework/abstract_syntax/connector_mechanism/parser/Connector.g:63:22: ^( CALLED_ACTIVITY qualified_name )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(CALLED_ACTIVITY, "CALLED_ACTIVITY"), root_1);

                adaptor.addChild(root_1, stream_qualified_name.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "called_activity"

    public static class inversion_of_control_connector_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "inversion_of_control_connector"
    // /Development/Workspaces/Unify/Unify/src/org/unify_framework/abstract_syntax/connector_mechanism/parser/Connector.g:68:1: inversion_of_control_connector : ( before_connector | after_connector | around_connector | parallel_connector | alternative_connector | iterating_connector | new_branch_connector | sync_branches_connector | switch_branches_connector );
    public final ConnectorParser.inversion_of_control_connector_return inversion_of_control_connector() throws RecognitionException {
        ConnectorParser.inversion_of_control_connector_return retval = new ConnectorParser.inversion_of_control_connector_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        ConnectorParser.before_connector_return before_connector13 = null;

        ConnectorParser.after_connector_return after_connector14 = null;

        ConnectorParser.around_connector_return around_connector15 = null;

        ConnectorParser.parallel_connector_return parallel_connector16 = null;

        ConnectorParser.alternative_connector_return alternative_connector17 = null;

        ConnectorParser.iterating_connector_return iterating_connector18 = null;

        ConnectorParser.new_branch_connector_return new_branch_connector19 = null;

        ConnectorParser.sync_branches_connector_return sync_branches_connector20 = null;

        ConnectorParser.switch_branches_connector_return switch_branches_connector21 = null;



        try {
            // /Development/Workspaces/Unify/Unify/src/org/unify_framework/abstract_syntax/connector_mechanism/parser/Connector.g:69:2: ( before_connector | after_connector | around_connector | parallel_connector | alternative_connector | iterating_connector | new_branch_connector | sync_branches_connector | switch_branches_connector )
            int alt4=9;
            alt4 = dfa4.predict(input);
            switch (alt4) {
                case 1 :
                    // /Development/Workspaces/Unify/Unify/src/org/unify_framework/abstract_syntax/connector_mechanism/parser/Connector.g:69:4: before_connector
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_before_connector_in_inversion_of_control_connector322);
                    before_connector13=before_connector();

                    state._fsp--;

                    adaptor.addChild(root_0, before_connector13.getTree());

                    }
                    break;
                case 2 :
                    // /Development/Workspaces/Unify/Unify/src/org/unify_framework/abstract_syntax/connector_mechanism/parser/Connector.g:70:4: after_connector
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_after_connector_in_inversion_of_control_connector327);
                    after_connector14=after_connector();

                    state._fsp--;

                    adaptor.addChild(root_0, after_connector14.getTree());

                    }
                    break;
                case 3 :
                    // /Development/Workspaces/Unify/Unify/src/org/unify_framework/abstract_syntax/connector_mechanism/parser/Connector.g:71:4: around_connector
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_around_connector_in_inversion_of_control_connector332);
                    around_connector15=around_connector();

                    state._fsp--;

                    adaptor.addChild(root_0, around_connector15.getTree());

                    }
                    break;
                case 4 :
                    // /Development/Workspaces/Unify/Unify/src/org/unify_framework/abstract_syntax/connector_mechanism/parser/Connector.g:72:4: parallel_connector
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_parallel_connector_in_inversion_of_control_connector337);
                    parallel_connector16=parallel_connector();

                    state._fsp--;

                    adaptor.addChild(root_0, parallel_connector16.getTree());

                    }
                    break;
                case 5 :
                    // /Development/Workspaces/Unify/Unify/src/org/unify_framework/abstract_syntax/connector_mechanism/parser/Connector.g:73:4: alternative_connector
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_alternative_connector_in_inversion_of_control_connector342);
                    alternative_connector17=alternative_connector();

                    state._fsp--;

                    adaptor.addChild(root_0, alternative_connector17.getTree());

                    }
                    break;
                case 6 :
                    // /Development/Workspaces/Unify/Unify/src/org/unify_framework/abstract_syntax/connector_mechanism/parser/Connector.g:74:4: iterating_connector
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_iterating_connector_in_inversion_of_control_connector347);
                    iterating_connector18=iterating_connector();

                    state._fsp--;

                    adaptor.addChild(root_0, iterating_connector18.getTree());

                    }
                    break;
                case 7 :
                    // /Development/Workspaces/Unify/Unify/src/org/unify_framework/abstract_syntax/connector_mechanism/parser/Connector.g:75:4: new_branch_connector
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_new_branch_connector_in_inversion_of_control_connector352);
                    new_branch_connector19=new_branch_connector();

                    state._fsp--;

                    adaptor.addChild(root_0, new_branch_connector19.getTree());

                    }
                    break;
                case 8 :
                    // /Development/Workspaces/Unify/Unify/src/org/unify_framework/abstract_syntax/connector_mechanism/parser/Connector.g:76:4: sync_branches_connector
                    {
                    root_0 = (Object)adaptor.nil();
